src/objects/Opportunity.object
<CustomObject>
    <businessProcesses>
        <fullName>Livongo Sales Process</fullName>
        <description>Livongo Sales Process_041417</description>
        <isActive>true</isActive>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Closed No Decision</fullName>
        </values>
        <values>
            <fullName>Closed Won</fullName>
        </values>
        <values>
            <fullName>Contracting</fullName>
        </values>
        <values>
            <fullName>Proposal</fullName>
        </values>
        <values>
            <fullName>Selling</fullName>
        </values>
        <values>
            <fullName>VOC</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>Account_Abbreviation__c</fullName>
        <description>JENGA-1447 - Sales to CI Handoff</description>
        <inlineHelpText>Document if the client has an abbreviation they prefer to use (Ex: Donnelly Financial Solutions goes by DFIN)</inlineHelpText>
        <label>Account Abbreviation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Adjusted_Annual_Renewal_Value_Enrolled__c</fullName>
        <formula>IF 
( ISPICKVAL(Type,&quot;Renewal&quot;), 
(Livongo_for_Diabetes_PwDs__c * Livongo_for_Diabetes_PPPM__c *12) 
+ 
(Livongo_for_Hypertension_PwHs__c * Livongo_for_Hypertension_PPPM__c * 12)
+
(Livongo_DPP_PwPDs__c * Livongo_DPP_PPPM__c * 12) 
+ 
( Livongo_for_Weight_Management_DP_PwOs__c * Livongo_for_Weight_Management_DP_PPPM__c * 12), 
0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Adjusted Annual Renewal Value (Enrolled)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Alternative_Contract_Path__c</fullName>
        <description>Only filled out if Client Proposal Preference is &quot;Alternative Contract Path is preferred&quot;</description>
        <inlineHelpText>Only filled out if Client Proposal Preference is &quot;Alternative Contract Path is preferred&quot;</inlineHelpText>
        <label>Alternative Contract Path</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Client_Proposal_Preference__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Accolade</fullName>
                </value>
                <value>
                    <fullName>Aetna</fullName>
                </value>
                <value>
                    <fullName>Anthem</fullName>
                </value>
                <value>
                    <fullName>BAS</fullName>
                </value>
                <value>
                    <fullName>BCBS KC</fullName>
                </value>
                <value>
                    <fullName>BCBS Mass</fullName>
                </value>
                <value>
                    <fullName>BCBS Michigan</fullName>
                </value>
                <value>
                    <fullName>BCBS State of RI</fullName>
                </value>
                <value>
                    <fullName>BCBS TN</fullName>
                </value>
                <value>
                    <fullName>Cambia - Regence</fullName>
                </value>
                <value>
                    <fullName>CapitalRx</fullName>
                </value>
                <value>
                    <fullName>Castlight</fullName>
                </value>
                <value>
                    <fullName>Cigna</fullName>
                </value>
                <value>
                    <fullName>Fidelity</fullName>
                </value>
                <value>
                    <fullName>HAP</fullName>
                </value>
                <value>
                    <fullName>HCSC</fullName>
                </value>
                <value>
                    <fullName>Healthcomp Administrators</fullName>
                </value>
                <value>
                    <fullName>HealthNow</fullName>
                </value>
                <value>
                    <fullName>HealthSCOPE</fullName>
                </value>
                <value>
                    <fullName>Highmark</fullName>
                </value>
                <value>
                    <fullName>Independence Blue Cross</fullName>
                </value>
                <value>
                    <fullName>Molina Medicaid</fullName>
                </value>
                <value>
                    <fullName>Premera</fullName>
                </value>
                <value>
                    <fullName>Trustmark</fullName>
                </value>
                <value>
                    <fullName>United</fullName>
                </value>
                <value>
                    <fullName>Virgin Pulse</fullName>
                </value>
                <value>
                    <fullName>Vitality</fullName>
                </value>
                <value>
                    <fullName>Welltok</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Amendment_to_Contract__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Amendment to Contract</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Annual_ED_Cost_Savings__c</fullName>
        <formula>2014.048125* Annual_Number_of_ED_Visits_Avoided__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Annual ED Cost Savings</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Annual_Heart_Attack_Cost_Savings__c</fullName>
        <formula>(79842.7285183994) * Annual_Heart_Attacks_Avoided__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Annual Heart Attack Cost Savings</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Annual_Heart_Attacks_Avoided__c</fullName>
        <formula>(Estimated_Enrolled_HTN_Population__c ) * (3.67/1000)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Annual Heart Attacks Avoided</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Annual_Number_of_ED_Visits_Avoided__c</fullName>
        <formula>Estimated_Enrolled_HTN_Population__c * ((433 *0.236 *0.5)/1000)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Annual Number of ED Visits Avoided</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Annual_Office_Visit_Savings__c</fullName>
        <formula>( Livongo_for_Hypertension_PwHs__c * 0.2)*220</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Annual Office Visit Savings</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Annual_Renewal_Deal_Value__c</fullName>
        <formula>((Livongo_for_Diabetes_PwDs__c *  Livongo_for_Diabetes_PPPM__c )* 12) + (( Livongo_for_Hypertension_PwHs__c *  Livongo_for_Hypertension_PPPM__c )*12)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Annual Renewal Deal Value calculated as follows: (Quantity * PPPM) *12</inlineHelpText>
        <label>Annual Renewal Deal Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Annual_Stroke_Cost_Savings__c</fullName>
        <formula>(54007.6391672994) *  Annual_Strokes_Avoided__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Annual Stroke Cost Savings</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Annual_Strokes_Avoided__c</fullName>
        <formula>Estimated_Enrolled_HTN_Population__c * (1.47/1000)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Annual Strokes Avoided</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BAA__c</fullName>
        <description>JENGA-1447 - Sales to CI Handoff</description>
        <label>BAA</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Benefit_Consultant_Involved_in_Deal__c</fullName>
        <label>Benefit Consultant Involved in Deal?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                    <label>No Involvement</label>
                </value>
                <value>
                    <fullName>Consultant introduced us, but was not involved in selling</fullName>
                    <label>Yes - Consultant introduced us, but was not involved in selling</label>
                </value>
                <value>
                    <fullName>Consultant introduced us, and was involved in selling</fullName>
                    <label>Yes - Consultant introduced us, and was involved in selling</label>
                </value>
                <value>
                    <fullName>Consultant did not introduce us, but was involved in selling</fullName>
                    <label>Yes - Consultant did not introduce us, but was involved in selling</label>
                </value>
                <value>
                    <fullName>Unsure</fullName>
                    <isActive>false</isActive>
                    <label>Unsure</label>
                </value>
                <value>
                    <fullName>Yes - Primary</fullName>
                    <isActive>false</isActive>
                    <label>Yes - Primary</label>
                </value>
                <value>
                    <fullName>Yes - Secondary</fullName>
                    <isActive>false</isActive>
                    <label>Yes - Secondary</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BillingPartner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Sales will populate this field during the sales cycle with initial ideas around the Billing Partner for a deal.  Once a deal goes into contracting, the official Billing Partner is established as a relationship in the Relationship table.</description>
        <inlineHelpText>Sales will populate this field during the sales cycle with initial ideas around the Billing Partner for a deal.  Once a deal goes into contracting, the official Billing Partner is established as a relationship in the Relationship table.</inlineHelpText>
        <label>Pre-Contracting Billing Partner</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Opportunities (Billing_Partner__c)</relationshipLabel>
        <relationshipName>Opportunities3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Billing_Method__c</fullName>
        <label>Billing Method</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Direct to Employer</fullName>
                </value>
                <value>
                    <fullName>Direct to TPA/ASO</fullName>
                    <label>Direct to Plan/TPA</label>
                </value>
                <value>
                    <fullName>Medical Claims TPA/ASO</fullName>
                    <label>Claims to Plan/TPA</label>
                </value>
                <value>
                    <fullName>Direct Through Partner</fullName>
                    <label>Direct Through Other Partner</label>
                </value>
                <value>
                    <fullName>Through PBM</fullName>
                </value>
                <value>
                    <fullName>Through Consultant</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Box_Contract_URL__c</fullName>
        <label>Box Contract URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Broker_Count__c</fullName>
        <inlineHelpText>Roll up Helper - count of Brokers Related Contacts</inlineHelpText>
        <label>Broker Count</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bypass_Contact_Role_Rules__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Only editable by Contract Ops</description>
        <inlineHelpText>Only editable by Contract Ops</inlineHelpText>
        <label>Bypass Contact Role Rules</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Bypass_Product_Requirement__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Required for the &quot;Manage Opportunity Programs&quot; flow that updates Price Book and Opp Programs.</description>
        <label>Bypass Product Requirement</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CCS__c</fullName>
        <description>JENGA-1447 - Sales to CI Handoff</description>
        <label>CCS</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CIM__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Client Implementation MAnager</description>
        <label>Client Implementation Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Opportunities2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CSM__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Client Success Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Calculated_Forecasted_Amount__c</fullName>
        <label>Calculated Forecasted Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Client_Proposal_Preference__c</fullName>
        <description>To be used only if Account Grouping is Current CVS TDC/Aetna Clients</description>
        <inlineHelpText>To be used only if Account Grouping is Current CVS TDC/Aetna Clients</inlineHelpText>
        <label>CVS/Aetna Client Proposal Preference</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>StageName</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Proposed all options, no preference</fullName>
                </value>
                <value>
                    <fullName>Direct Agreement is preferred</fullName>
                </value>
                <value>
                    <fullName>TDC Renewal is preferred</fullName>
                </value>
                <value>
                    <fullName>Alternative Contract Path is preferred</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Client_Specific_Language_Nuances__c</fullName>
        <description>JENGA-1447 - Sales to CI Handoff</description>
        <inlineHelpText>Document if the client uses any specific lanugage nuances (Ex: Walmart calls employees associates)</inlineHelpText>
        <label>Client Specific Language Nuances</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Commission_Notes__c</fullName>
        <label>Commission Notes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Billing_Method__c</fullName>
        <formula>Text(Contract.Billing_Method__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contract Billing Method</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Nuances__c</fullName>
        <description>Text field to describe report needs or contractual requirements (SLAs/PGs/ROIs) that are still in negotiation</description>
        <inlineHelpText>Use this text box to describe any non-standard agreements in detail for the CI to reference.</inlineHelpText>
        <label>Contract Nuances</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Contract_Path__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Direct contracts, please select &quot;Livongo&quot;. Indicates the Contract Path for the Opportunity, and required for Opps to be closed won. Once an Opp is won, the Contract Path will be represented as a relationship associated to the Client Overview.</description>
        <inlineHelpText>Direct contracts, please select &quot;Livongo&quot;. Indicates the Contract Path for the Opportunity, and required for Opps to be closed won. Once an Opp is won, the Contract Path will be represented as a relationship associated to the Client Overview.</inlineHelpText>
        <label>Contract Path</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Contract Path must be a Partner Account.</errorMessage>
            <filterItems>
                <field>Account.RecordType.Name</field>
                <operation>equals</operation>
                <value>Partner Account</value>
            </filterItems>
            <infoMessage>Contract Path must be a Partner Account.</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Opportunities (Contract Path)</relationshipLabel>
        <relationshipName>Opportunities1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contract_Path_from_Contract__c</fullName>
        <formula>Contract.Contract_Path_Deprecated__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contract Path (from Contract)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Status__c</fullName>
        <inlineHelpText>Has a contract been requested or delivered yet?</inlineHelpText>
        <label>Contract Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Requested</fullName>
                </value>
                <value>
                    <fullName>Delivered</fullName>
                </value>
                <value>
                    <fullName>Redlining</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cost_Savings_83_PPPM_Annual__c</fullName>
        <formula>((( Livongo_for_Diabetes_PwDs__c  * 131) * 0.35) * 12)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cost Savings 83 PPPM_Annual</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cost_Savings_83_PPPM_Monthly__c</fullName>
        <formula>(Livongo_for_Diabetes_PwDs__c * 131) * 0.35</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>$131 PPPM cost-savings multiplied by 35% projected enrollment</inlineHelpText>
        <label>Cost Savings 83 PPPM_Monthly</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cost_of_diabetes_testing_supplies__c</fullName>
        <label>Cost of diabetes testing supplies</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Covered_Lives__c</fullName>
        <formula>Account.Covered_Lives__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Covered Lives</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CurrentUser_CIM__c</fullName>
        <formula>IF(  CIM__c  = $User.Id , 1 , 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CurrentUser_CIM</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CurrentUser_CSM__c</fullName>
        <formula>IF(CSM__c  = $User.Id , 1 , 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CurrentUser_CSM</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Custom_Billing_Nuances__c</fullName>
        <defaultValue>false</defaultValue>
        <description>JENGA-1447 - Sales to CI Handoff</description>
        <inlineHelpText>If there is a non-standard billing agreement, check this box (examples: claims based billing, milestones based billing)</inlineHelpText>
        <label>Custom Billing Nuances</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Custom_Data_Exchange_Nuances__c</fullName>
        <defaultValue>false</defaultValue>
        <description>JENGA-1447 - Sales to CI Handoff</description>
        <inlineHelpText>If there is a non-standard data exchange agreement, check this box (examples: unique or agreed upon reporting)</inlineHelpText>
        <label>Custom Data Exchange Nuances</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Custom_Enrollment_Nuances__c</fullName>
        <defaultValue>false</defaultValue>
        <description>JENGA-1447 - Sales to CI Handoff</description>
        <inlineHelpText>If there is a non-standard enrollment agreement, check this box (examples: program level eligibility, targetted marketing for Tier 3 clients)</inlineHelpText>
        <label>Custom Enrollment Nuances</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DPP_Projected_Cases_Prevented_0_3__c</fullName>
        <formula>Estimated_Enrolled_DPP_Population__c *0.33*0.35*0.212</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DPP Projected Cases Prevented 0-3%</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DPP_Projected_Cases_Prevented_10__c</fullName>
        <formula>Estimated_Enrolled_DPP_Population__c *0.33*0.85*0.238</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DPP Projected Cases Prevented 10+%</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DPP_Projected_Cases_Prevented_3_5__c</fullName>
        <formula>Estimated_Enrolled_DPP_Population__c *0.33*0.38*0.137</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DPP Projected Cases Prevented 3-5%</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DPP_Projected_Cases_Prevented_5_7__c</fullName>
        <formula>Estimated_Enrolled_DPP_Population__c *0.33*0.54*0.124</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DPP Projected Cases Prevented 5-7%</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DSA__c</fullName>
        <description>JENGA-1447 - Sales to CI Handoff</description>
        <label>DSA</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Data_Available__c</fullName>
        <description>JENGA-1447 - Sales to CI Handoff</description>
        <inlineHelpText>What, if any, discussions have taken place regarding claims &amp; elig? What data do they have available and plan to send us?</inlineHelpText>
        <label>Data Available</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deal_Value__c</fullName>
        <formula>((Livongo_for_Diabetes_PwDs__c * Livongo_for_Diabetes_PPPM__c * 0.25 * 12))
+
(( Livongo_for_Hypertension_PwHs__c * Livongo_for_Hypertension_PPPM__c * 0.10 * 12))
+
IF(Livongo_DPP_PPPM__c == 1, 608 * (Livongo_DPP_PwPDs__c * 0.10),
(( Livongo_DPP_PwPDs__c * Livongo_DPP_PPPM__c * 0.10 *12)))
+
IF(Livongo_for_Weight_Management_DP_PPPM__c == 1.00, 608 * (Livongo_for_Weight_Management_DP_PwOs__c * 0.10),
(( Livongo_for_Weight_Management_DP_PwOs__c * Livongo_for_Weight_Management_DP_PPPM__c * 0.10 * 12)))
+
Livongo_Behavioral_Health_PwBHs__c * Livongo_for_BH_PPPM__c *12 + (Livongo_Behavioral_Health_PwBHs__c * 0.02) * Livongo_BH_Coaching_PPPM__c * 6</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This is the pre-close ARR, not taking into account any adjustments due to partner fees, PGs, etc. Your final commissionable ARR may differ.</inlineHelpText>
        <label>Old Gross ARR</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Disable_BH__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Disable BH</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Discussed_Marketing_Approach__c</fullName>
        <label>Discussed Marketing Approach?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ESI_Addendum__c</fullName>
        <description>JENGA-1543 - Sales to CI Handoff</description>
        <label>ESI Addendum</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ESI_PHI_Release_Form__c</fullName>
        <description>JENGA-1543 - Sales to CI Handoff</description>
        <label>ESI PHI Release Form</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Estimated_Enrolled_DPP_Population__c</fullName>
        <formula>(ROUND ( Livongo_DPP_PwPDs__c *0.10,0))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Estimated Enrolled DPP Population</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Estimated_Enrolled_HTN_Population__c</fullName>
        <formula>Livongo_for_Hypertension_PwHs__c * 0.2</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Estimated Enrolled HTN Population</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Estimated_Enrolled_Population__c</fullName>
        <formula>(ROUND (Livongo_for_Diabetes_PwDs__c*0.35,0))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Assuming a 35% enrollment rate</inlineHelpText>
        <label>Estimated Enrolled Population</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Expected_Annual_Cost_HTN__c</fullName>
        <formula>Estimated_Enrolled_HTN_Population__c * Livongo_for_Hypertension_PPPM__c * 12</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Expected Annual Cost HTN</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Expected_Three_year_Cost_HTN__c</fullName>
        <formula>Expected_Annual_Cost_HTN__c * 3</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Expected Three-year Cost HTN</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Fast_Launch_Credit__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Fast Launch Credit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Fast_Start_Close_Date__c</fullName>
        <description>The date that the deal needs to close by to be eligible for the Fast Start Credit</description>
        <inlineHelpText>The date that the deal needs to close by to be eligible for the Fast Start Credit</inlineHelpText>
        <label>Fast Start Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fast_Start_Credit_Target__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Select this field if you are targeting this opp for the fast start credit. Once actually presented to the client, also check the box below.</inlineHelpText>
        <label>Fast Start Credit Target?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Fast_Start_Credit_Type__c</fullName>
        <label>Fast Start Credit Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>One-time (a $X,XXX credit/ $X PPPM credit)</fullName>
                </value>
                <value>
                    <fullName>Recurring (credit of $X PPPM)</fullName>
                </value>
                <value>
                    <fullName>Custom</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Fast_Start_Credit__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Have you offered the prospect the fast start credit?</inlineHelpText>
        <label>Fast Start Credit Offered?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Fast_Start_Custom_Detail__c</fullName>
        <label>Fast Start Custom Detail</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Fast_Start_Launch_Date__c</fullName>
        <description>The date that the deal needs to launch by to be eligible for the Fast Start Credit</description>
        <inlineHelpText>The date that the deal needs to launch by to be eligible for the Fast Start Credit</inlineHelpText>
        <label>Fast Start Launch Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fast_Start_Participation_Rate_Date__c</fullName>
        <description>The date a client needs to reach the Fast Start Participation Rate by</description>
        <inlineHelpText>The date a client needs to reach the Fast Start Participation Rate by</inlineHelpText>
        <label>Fast Start Participation Rate Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fast_Start_Participation_Rate__c</fullName>
        <description>The Participation Rate a client needs to reach by the Fast Start Participation Date</description>
        <inlineHelpText>The Participation Rate a client needs to reach by the Fast Start Participation Date</inlineHelpText>
        <label>Fast Start Participation Rate</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Fast_Start_Reaction__c</fullName>
        <inlineHelpText>What was the client&apos;s reaction to the fast start credit?</inlineHelpText>
        <label>Fast Start Reaction</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Not interested</fullName>
                </value>
                <value>
                    <fullName>Possibly interested</fullName>
                </value>
                <value>
                    <fullName>Definitely interested</fullName>
                </value>
                <value>
                    <fullName>Accepting -- Email confirmation Received</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Forecast_Manager_Call__c</fullName>
        <label>Forecast Manager Call</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Not in Forecast</fullName>
                    <default>true</default>
                    <label>Not in Forecast</label>
                </value>
                <value>
                    <fullName>Forecast - Upside</fullName>
                </value>
                <value>
                    <fullName>Forecast - Call</fullName>
                </value>
                <value>
                    <fullName>Forecast - Closed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Go_to_Market_Strategy_Details__c</fullName>
        <description>JENGA-1447 - Sales to CI Handoff</description>
        <inlineHelpText>How does the Partner plan to go to market with the programs? i.e. Opt-out to all ASO groups on 1/1, built into the chronic condition offering, etc. What lines of business are included? Are there any onboarding expectations that have been discussed?</inlineHelpText>
        <label>Go to Market Strategy Details</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Gross_ARR__c</fullName>
        <label>Gross ARR</label>
        <summarizedField>OpportunityLineItem.Gross_Program_ARR_Copy__c</summarizedField>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
</CustomObject>